new Carte and Joueur class, Defis method + new project Unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 
 ex02_BatailleCorse/obj/
 ex02_BatailleCorse/bin/
+
+TestsUnitaires/obj/
+TestsUnitaires/bin/
+
+TestsUnitairesMSTest/obj/
+TestsUnitairesMSTest/bin/
